# panda_demos

./: .gitignore  LICENSE.md  README.md
force_controllers/: CMakeLists.txt
force_controllers/config/: panda_impedance.yaml
force_controllers/include/: base_effort_controller.h  impedance_controller.h  utilities.h
force_controllers/scripts/: interactive_marker.py
force_controllers/src/: base_effort_controller.cpp  impedance_controller.cpp  utilities.cpp
hiqp_demo_node/: CMakeLists.txt  package.xml
hiqp_demo_node/include/hiqp_demo_node/: hiqp_demo_node.h
hiqp_demo_node/src/: hiqp_demo_node.cpp
naf_env/src/: cabinet_env.py  ddpg.py  environment.py  eval_baseline.sh  eval_cabinet.sh  halfspaces.py  listener.py  main.py  naf.py  normalized_actions.py  plotter.py  prioritized_replay_memory.py  quad.py  reinforce.py  replay_memory.py  scripting.sh  talker.py  test_node.py  train_cabinet.py  train_reinforce.py
panda_insertion/: .gitignore  CMakeLists.txt  README.md  package.xml
panda_insertion/config/: custom_rosconsole.conf  spring_parameters.yaml  spring_parameters_sim.yaml
panda_insertion/include/panda_insertion/: Controller.hpp  Helpers.hpp  Insertion.hpp  InsertionRL.hpp  MessageHandler.hpp  Panda.hpp  StateMachine.hpp  TrajectoryHandler.hpp
panda_insertion/launch/: panda_insertion.launch  panda_insertion_live.launch  panda_insertion_live_backup.launch  panda_insertion_live_rl.launch  panda_insertion_rl.launch  panda_insertion_sim.launch
panda_insertion/msg/: StateMsg.msg
panda_insertion/scripts/: set_above_hole_pose.sh  set_initial_pose.sh
panda_insertion/src/: Controller.cpp  Insertion.cpp  InsertionRL.cpp  MessageHandler.cpp  Panda.cpp  StateMachine.cpp  TrajectoryHandler.cpp  insertion.cpp  insertion_main.cpp  insertion_spirl.cpp  talker.cpp
panda_insertion/srv/: SwapController.srv
panda_insertion/trajectories/: downTrajectory.csv  initTraj.csv  initalmovementtrajectory.csv  spiral.csv  spiralMotion.csv
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: amici.srdf  ompl_planning.yaml  panda.srdf  panda_controllers.yaml  panda_velocity_controllers.yaml  ros_controllers.yaml
panda_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  moveit.rviz  panda_moveit_controller_manager.launch.xml  panda_velocity_moveit_controller_manager.launch.xml  ros_controllers.launch
panda_table_description/config/: panda_gazebo_control.yaml
panda_table_description/launch/: panda_gazebo_effort.launch  panda_gazebo_hiqp.launch  panda_gazebo_hiqp_vel.launch  panda_gazebo_hiqp_vel_cabinet.launch  panda_gazebo_hiqp_vel_ramp.launch  panda_gazebo_impedance.launch  panda_gazebo_velocity.launch  sim.rviz
panda_table_description/meshes/: book_pferdewitze.dae  rough_box.dae  smooth_box.dae
panda_table_description/urdf/: book_pferdewitze.urdf  box.gazebo.xacro  box.urdf.xacro  cabinet.urdf.xacro  panda_cabinet_vel.urdf.xacro  panda_table.gazebo.xacro  panda_table.urdf.xacro  panda_table_ramp.gazebo.xacro  panda_table_ramp.urdf.xacro  panda_table_ramp_box.urdf.xacro  panda_table_ramp_vel.urdf.xacro  panda_table_vel.urdf.xacro  panda_vel.transmission.xacro  table.gazebo.xacro  table.urdf.xacro
panda_table_launch/config/: controllers.yaml  controllers_backup.yaml  franka_limits.yaml  franka_limits_backup.yaml
panda_table_launch/launch/: panda_cartesian_impedance.launch  panda_hiqp_effort.launch  panda_hiqp_velocity.launch  panda_joint_control.launch
panda_table_launch/scripts/: nominal_joints.sh  sim_2drl_tasks.sh  sim_nominal_joints.sh  sim_picking_task.sh  sim_reset_episode.sh  sim_reset_episode_fast.sh  sim_rl_tasks.sh  sim_test_eq.sh  sim_test_picking_task.sh  sim_test_picking_tasks.sh  sim_test_tasks.sh  switch_impedance.sh
rl_task_plugins/: CMakeLists.txt  package.xml  plugins.xml
rl_task_plugins/include/rl_task_plugins/: tdef_rl_2dspace.h  tdef_rl_full_pose.h  tdef_rl_pick.h  tdef_rl_put_book.h  tdyn_async_policy.h  tdyn_async_policy_put_book.h  tdyn_pick_policy.h  tdyn_random.h
rl_task_plugins/msg/: DesiredErrorDynamicsMsg.msg  StateMsg.msg  StateMsgWithCorners.msg
rl_task_plugins/src/: tdef_rl_2dspace.cpp  tdef_rl_full_pose.cpp  tdef_rl_pick.cpp  tdef_rl_put_book.cpp  tdyn_async_policy.cpp  tdyn_async_policy_put_book.cpp  tdyn_pick_policy.cpp  tdyn_random.cpp
rl_task_plugins/srv/: Act.srv
safe_drl/: main.py  naf.py  replay_memory.py
trajectory_generation_ws/: example.txt  generator_from_moveit.py  panda_table.urdf  param_reader.py  plotter_from_generated.py  writer_from_generated.py
trajectory_generator/: CMakeLists.txt  package.xml  robot_description (copy).xml  robot_description.test  robot_description.xml
trajectory_generator/launch/: force_reader.launch  learning_loop.launch  moveit.launch  read_topics.launch  rrmc.launch  run_trajectory.launch  trajectory_joint_control.launch
trajectory_generator/scripts/: batch_plotter_from_generated.py  force_reader.py  imager.py  joints_position_dataset_generator.py  learning_loop.py  learning_loop_2.py  ls_plotter.py  main.py  plotter2.py  plotter_from_generated.py  policy_function_plotter.py  policy_function_plotter_helper.py  pytorch_reinforce.py  quiver.py  reader.py  release_velocity_plotter.py  resolved_rate_motion_control.py  safety_check_client.py  shuffleboard.py  state_vae.py  stone_sensing.py  trajectory_generator_gripper_client.py  trajectory_generator_gripper_server.py  trajectory_vae.py  velocity_plotter.py  writer_from_generated.py
trajectory_generator/src/: generator.cpp  generator2.cpp  trajectory_generator_gripper_client.cpp  trajectory_generator_gripper_server.cpp  trajectory_safety_check_server.cpp  velocity_profile_generator.cpp
trajectory_generator/srv/: trajectory_safety_check.srv  trajectory_safety_check_y_getter.srv  trajectory_safety_check_y_setter.srv  trajectory_safety_check_z_getter.srv  trajectory_safety_check_z_setter.srv
trajectory_generator/utils/: batch_plotter_from_generated.py  plotter_from_generated.py  release_velocity_plotter.py  velocity_plotter.py  writer_from_generated.py
(+29 files in other folders)
