<?xml version="1.0"?>
<package format="2">
  <name>panda_insertion</name>
  <version>0.0.0</version>
  <description>A panda controller for peg in hole insertion</description>

  <maintainer email="lanstobias@gmail.com">Tobias Lans</maintainer>
  <maintainer email="bobo.lillqvist@gmail.com">Bobo Lillqvist</maintainer>

  <license>BSD</license>

  <url type="repository">http://github.com/lanstobias/panda_insertion</url>

  <author email="lanstobias@gmail.com">Tobias Lans</author>
  <author email="bobo.lillqvist@gmail.com">Bobo Lillqvist</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <!-- <build_depend>franka_description</build_depend> -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <!-- <build_export_depend>franka_description</build_export_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <!-- <exec_depend>franka_description</exec_depend> -->

</package>
